# sophia

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .gitleaksignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ingest  Dockerfile.ingest-worker  LICENSE  MIGRATION-README.md  README.md  ROADMAP.md  STATUS.md  docker-compose.yml  jsconfig.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  repomix.knowledge-base.config.json  restormel.config.json  rules.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
data/: reingestion-manifest.json  sep-entry-urls.json  sep-topic-presets.json  source-list-3a.json  source-list-pom.json  source-list-reingest-pilot.json
docs/: AGENT-IMPLEMENTATION-PROMPT.md  CLOUD-DEPLOYMENT.md  LOCAL_DOCS.md  MVP-PIVOT-PLAN.md  README.md  WAVE-1-INGESTION-ANALYSIS.md  accessibility-rules.md  api-development-portal-roadmap.md  api-v1.md  architecture.md  argument-graph.md  argument-map-gold-standard-plan.md  argument-native-platform-roadmap.md  byok-end-user-model-selection-plan.md  byok-rollout-plan.md  consumer-monetization-rollout-plan.md  copy-dictionary.md  daily-drills-pedagogy-v2.md  evaluation-methodology.md  ingestion-self-heal-restormel-handoff.md  learn-pedagogy-framework.md  phase-3b-checklist.md  phase-checklist.md  phase1-closeout-baseline-2026-03-12.md  prompts-reference.md  runbooks.md  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+1337 files in other folders)
