[package]
name = "stoa"
version = "0.3.0"
description = "Stoa desktop shell"
authors = ["Allotment Technology Ltd"]
edition = "2021"

[lib]
name = "stoa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
